tests/syntax_errors/sasha82_2.tl
-- test case 82.
-- Description : for cycles, assignment in the condition.

-- Expected : '2'
require "ifj21" 
function main(iterations : number )      
    local b : number                     
    for i=0, b = 10, -1 do               
    end                                  
end                                      
main("helloo")                         

